# frappe_giving

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  bandit.yaml  crowdin.yml  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  crowdin.yml
.history/: README_20260409135343.md  README_20260508150716.md  README_20260508150743.md  README_20260508182046.md  README_20260508182048.md  README_20260508182056.md  README_20260508182128.md  README_20260508182134.md  README_20260508182140.md  README_20260508182143.md  README_20260508182147.md  README_20260508182152.md  README_20260508182213.md  README_20260508182216.md  README_20260508182220.md  README_20260508182223.md  README_20260508182225.md  README_20260508182227.md  README_20260508182228.md  README_20260508182233.md  README_20260508182237.md  README_20260508182238.md  README_20260508182424.md  README_20260508182448.md  README_20260508182451.md  README_20260508182454.md  README_20260508182459.md  README_20260508182644.md  README_20260508182647.md  README_20260508182654.md  README_20260508182701.md  README_20260508182718.md  README_20260508182719.md  README_20260508182741.md  README_20260508182819.md  README_20260508182821.md  README_20260508182826.md  README_20260508182830.md  README_20260508182838.md  README_20260508182843.md  (+159 more)
.history/frappe_giving/: hooks_20260506124412.py  hooks_20260506173104.py  hooks_20260506173111.py  hooks_20260506173336.py  hooks_20260506173349.py  hooks_20260506173432.py  hooks_20260506173500.py  hooks_20260506173854.py
.history/frontend/: index_20260506124412.html
frappe_giving/: donor_permissions.py  fee_recovery.py  hooks.py  install.py  modules.txt  patches.txt  stripe_helpers.py  tasks.py  workspace_i18n.py
frappe_giving/api/: donate.py  notifications.py  portal.py  receipts.py  stripe.py
frappe_giving/desktop_icon/: frappe_giving.json
frappe_giving/fixtures/: email_template.json
frappe_giving/locale/: es.po  main.pot  pt.po
frappe_giving/patches/: backfill_welcome_email_sent_at.py  create_donor_role.py  enforce_donor_role_desk_access.py
frappe_giving/public/: node_modules
frappe_giving/signals/: payment_entry.py  (+1 more)
frontend/: index.html  package-lock.json  package.json  proxyOptions.js  vite.config.js  vite.config.widget.js
scripts/: stabilize-pot.py
(+64 files in other folders)
